--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="hw"><h1>hello world</h1></div>
+    <div class="login-greeting">
+      <h1 class="greeting hidden"></h1>
+      <form class="login-form">
+        <input
+          required
+          maxlength="15"
+          type="text"
+          placeholder="whai is your name?"
+        />
+        <input type="submit" value="Enter" />
+      </form>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
