--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           required
           maxlength="15"
           type="text"
-          placeholder="whai is your name?"
+          placeholder="what is your name?"
         />
         <input type="submit" value="Enter" />
       </form>
