login-form done!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="login-greeting">
       <h1 class="greeting hidden"></h1>
-      <form class="login-form">
+      <form class="login-form hidden">
         <input
           required
           maxlength="15"
