--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <input type="submit" value="Enter" />
       </form>
     </div>
-    <script src="app.js"></script>
+    <script src="js/greeting.js"></script>
   </body>
 </html>
