--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="clock">
+      <h1></h1>
+    </div>
     <div class="login-greeting">
       <h1 class="greeting hidden"></h1>
       <form class="login-form hidden">
@@ -21,5 +24,6 @@
       </form>
     </div>
     <script src="js/greeting.js"></script>
+    <script src="js/clock.js"></script>
   </body>
 </html>
