--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <input type="submit" value="Enter" />
       </form>
     </div>
+    <div class="quote">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
   </body>
 </html>
