--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="clock">
-      <h1></h1>
-    </div>
-    <div class="login-greeting">
-      <h1 class="greeting hidden"></h1>
-      <form class="login-form hidden">
-        <input
-          required
-          maxlength="15"
-          type="text"
-          placeholder="what is your name?"
-        />
-        <input type="submit" value="Enter" />
-      </form>
-    </div>
-    <div class="quote">
-      <span></span>
-      <span></span>
-    </div>
+    <main>
+      <div class="clock">
+        <h1></h1>
+      </div>
+      <div class="login-greeting">
+        <h1 class="greeting hidden"></h1>
+        <form class="login-form hidden">
+          <input
+            required
+            maxlength="15"
+            type="text"
+            placeholder="what is your name?"
+          />
+          <input type="submit" value="Enter" />
+        </form>
+      </div>
+      <div class="quote">
+        <span></span>
+        <span></span>
+      </div>
+    </main>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
