--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           <input type="submit" value="Enter" />
         </form>
       </div>
+      <form class="todo-form">
+        <input type="text" placeholder="Write a To Do and Press Enter !" />
+      </form>
+      <ul class="todo-list">
+        <li></li>
+      </ul>
       <div class="quote">
         <span></span>
         <span></span>
@@ -33,5 +39,6 @@
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
   </body>
 </html>
