modify greeting.css & greeting.js

--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
         <h1></h1>
       </div>
       <div class="login-greeting">
-        <h1 class="greeting hidden"></h1>
-        <form class="login-form hidden">
+        <form class="login-form">
           <input
             required
             maxlength="15"
             type="text"
             placeholder="what is your name?"
           />
-          <input type="submit" value="Enter" />
+          <input class="btn" type="submit" value="Enter" />
+          <h2 class="greeting hidden"></h2>
         </form>
       </div>
+      <div class="h25"></div>
       <form class="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter !" />
       </form>
