add function delete

--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
       <form class="todo-form">
         <input type="text" placeholder="Write a To Do and Press Enter !" />
       </form>
-      <ul class="todo-list">
-        <li></li>
-      </ul>
+      <ul class="todo-list"></ul>
+      <!-- <div class="h100"></div> -->
       <div class="quote">
-        <span></span>
-        <span></span>
+        <h3></h3>
+        <h4></h4>
       </div>
     </main>
     <script src="js/greeting.js"></script>
