--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </form>
       </div>
       <div class="h25"></div>
-      <form class="todo-form">
+      <form class="todo-form hidden">
         <input type="text" placeholder="Write a To Do and Press Enter !" />
       </form>
       <ul class="todo-list"></ul>
