--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="weather">
+      <span></span>
+      <span></span>
+    </div>
     <main>
       <div class="clock">
         <h1></h1>
@@ -25,20 +29,23 @@
         </form>
       </div>
       <div class="h25"></div>
-      <form class="todo-form hidden">
-        <input type="text" placeholder="Write a To Do and Press Enter !" />
-      </form>
-      <ul class="todo-list"></ul>
-      <!-- <div class="h100"></div> -->
-      <div class="quote">
-        <h3></h3>
-        <h4></h4>
+      <div class="todo hidden">
+        <form class="todo-form">
+          <input type="text" placeholder="Write a To Do and Press Enter !" />
+        </form>
+        <ul class="todo-list"></ul>
       </div>
+      <div class="h100"></div>
     </main>
+    <div class="quote">
+      <h3></h3>
+      <h4></h4>
+    </div>
     <script src="js/greeting.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
